# early-backup

./: .gitattributes  .gitignore  .prettierignore  .prettierrc.yaml  Cargo.toml  README.md  analysis_options.yaml  build.rs  package.json  pnpm-workspace.yaml  pubspec.yaml  rustfmt.toml  setup.sh
apis/: auth.proto
apps/flutter/: build.yaml  pubspec.yaml
apps/flutter/lib/: main.dart  state.dart  stories.dart  views.dart
apps/flutter/web/: index.html  manifest.json
apps/net/: Cargo.toml  README.md
apps/site/: LICENSE  README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/site/src/: root.css  root.ts
apps/vscode/: LICENSE.txt  README.md  build.ts  package.json  tsconfig.json
apps/vscode/example/: .prettierrc.yaml  README.md
apps/vscode/src/: extension.ts
apps/vscode/themes/: dark-color-theme.json
brand/: README.md  data.yaml  points.yaml
brand/flutter/: README.md  pubspec.yaml
brand/site/: package.json
brand/svg/: build.ts  package.json  tsconfig.json
brand/svg/src/: graph.ts  svg.ts  utils.ts
crates/: placeholder.rs
crates/worktrace/: Cargo.toml
crates/worktrace-build/: Cargo.toml  README.md
crates/worktrace-build/src/: lib.rs  logo.rs
scripts/: count-lines.sh  package.json  update-logo.sh
scripts/bundle/: README.md  build.ts  index.cjs  index.cjs.map  index.d.ts  index.js  index.js.map  index.ts  package.json  tsconfig.json
scripts/shell/: package.json  tsconfig.json
scripts/shell/lib/: index.d.ts  index.d.ts.map  (+2 more)
scripts/tsconfig/: package.json  tsconfig.node.json
scripts/workspace_dart/: pubspec.yaml
(+40 files in other folders)
